--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DJ Leamen's Portfolio</title>
+    <meta name="description" content="djleamen Dilara DJ Leamen's Portfolio">
   </head>
   <body>
     <div id="app"></div>
