--- a/index.html
+++ b/index.html
@@ -10,5 +10,35 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script type="text/javascript" async src="https://cdn.reamaze.com/assets/reamaze-loader.js"></script>
+      <script type="text/javascript">
+        var _support = _support || { 'ui': {}, 'user': {} };
+        _support['account'] = // account id
+        _support['ui']['contactMode'] = 'mixed';
+        _support['ui']['enableKb'] = 'true';
+        _support['ui']['mailbox'] = // mailbox id
+        _support['ui']['styles'] = {
+        widgetColor: 'rgba(16, 162, 197, 1)',
+        gradient: true,
+        };
+        _support['ui']['shoutboxFacesMode'] = '';
+        _support['ui']['widget'] = {
+        allowBotProcessing: 'false',
+        slug: 'djs-portfolio',
+        label: {
+          text: 'Let me know if you have any questions! 😊',
+          mode: "notification",
+          delay: 3,
+          duration: 30,
+          primary: '',
+          sound: true,
+        },
+        position: 'bottom-right'
+      };
+      _support['apps'] = {
+      recentConversations: {},
+      faq: {"enabled":true}
+      };
+    </script>
   </body>
 </html>
