--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <script type="text/javascript" async src="https://cdn.reamaze.com/assets/reamaze-loader.js"></script>
       <script type="text/javascript">
         var _support = _support || { 'ui': {}, 'user': {} };
-        _support['account'] = // account id
+        _support['account'] = 'd51caf1d-a560-4dae-9b60-060e51b1db35';
         _support['ui']['contactMode'] = 'mixed';
         _support['ui']['enableKb'] = 'true';
-        _support['ui']['mailbox'] = // mailbox id
+        _support['ui']['mailbox'] = '46374831';
         _support['ui']['styles'] = {
         widgetColor: 'rgba(16, 162, 197, 1)',
         gradient: true,
